--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -5,8 +5,7 @@
   
   <body>
 
-    <h1>I am the solution to HW1!</h1>
-    <h2>I am the updated solution to HW1!</h2>
+    <h1>And now I am the solution to HW1!</h1>
 
     <p>
         And I can link to <a href="./otherpage.html">other pages.</a>
