--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -11,7 +11,7 @@
     <p>Our hand-made cinnamon rolls</p>
     
     <div id="Original">
-      <img src="assets/products/original-cinnamon-roll.jpg" />
+      <img src="./assets/products/original-cinnamon-roll.jpg" />
       <p>Original cinnamon roll</p>
       <p>$2.49</p>
     </div>
