--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <meta charset="UTF-8">
-  <title>Page Title</title>
+  <head>
+    <meta charset="UTF-8">
+    <title>Page Title</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>  
+
   
   <body>
 
@@ -9,42 +13,43 @@
     <h2>Products</h2>
     <h3>CART</h3>
     <p>Our hand-made cinnamon rolls</p>
-    
-    <div id="Original">
-      <img src="../assets/products/original-cinnamon-roll.jpg" />
-      <p>Original cinnamon roll</p>
-      <p>$2.49</p>
-    </div>
+    <div id="Gallery-Images">
+      <div id="Original">
+        <img src="../assets/products/original-cinnamon-roll.jpg" />
+        <p>Original cinnamon roll</p>
+        <p>$2.49</p>
+      </div>
 
-    <div id="Apple">
-      <img src="assets/products/apple-cinnamon-roll.jpg" />
-      <p>Apple cinnamon roll</p>
-      <p>$3.49</p>
-    </div>
+      <div id="Apple">
+        <img src="../assets/products/apple-cinnamon-roll.jpg" />
+        <p>Apple cinnamon roll</p>
+        <p>$3.49</p>
+      </div>
 
-    <div id="Raisin">
-      <img src="assets/products/raisin-cinnamon-roll.jpg" />
-      <p>Raisin cinnamon roll</p>
-      <p>$2.99</p>
-    </div>
+      <div id="Raisin">
+        <img src="../assets/products/raisin-cinnamon-roll.jpg" />
+        <p>Raisin cinnamon roll</p>
+        <p>$2.99</p>
+      </div>
 
-    <div id="Walnut">
-      <img src="assets/products/walnut-cinnamon-roll.jpg" />
-      <p>Walnut cinnamon roll</p>
-      <p>$3.49</p>
-    </div>
+      <div id="Walnut">
+        <img src="../assets/products/walnut-cinnamon-roll.jpg" />
+        <p>Walnut cinnamon roll</p>
+        <p>$3.49</p>
+      </div>
 
-    <div id="Double">
-      <img src="assets/products/double-chocolate-cinnamon-roll.jpg" />
-      <p>Double-chocolate cinnamon roll</p>
-      <p>$3.99</p>
-    </div>
+      <div id="Double">
+        <img src="../assets/products/double-chocolate-cinnamon-roll.jpg" />
+        <p>Double-chocolate cinnamon roll</p>
+        <p>$3.99</p>
+      </div>
 
-    <div id="Strawberry">
-      <img src="assets/products/strawberry-cinnamon-roll.jpg" />
-      <p>Strawberry cinnamon roll</p>
-      <p>$3.99</p>
+      <div id="Strawberry">
+        <img src="../assets/products/strawberry-cinnamon-roll.jpg" />
+        <p>Strawberry cinnamon roll</p>
+        <p>$3.99</p>
+      </div>
+      
     </div>
-
   </body>
 </html>
