--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -1,55 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Page Title</title>
-    <link rel="stylesheet" href="../style/style.css" />
-  </head>  
+<head>
+  <meta charset="UTF-8">
+  <title>Page Title</title>
+  <link rel="stylesheet" href="../style/styles.css" type="text/css" />
+</head>  
 
-  
-  <body>
+<body>
 
-    <h1>Product Gallery</h1>
+  <div id="h1-container">
+      <h1>Product Gallery</h1>   
+  </div>
+
+  <hr>
+
+  <div id="logo">
+    <img class="logo" src="../assets/logo/logo-01.svg" />
+  </div>
+
+  <hr> 
+
+  <nav>
+    <a href="../solution-hw1/otherpage.html">PRODUCTS</a>
+    <a href="../solution-hw1/thirdpage.html">CART</a>
+  </nav>
+
+  <div id="gallery-section">
     <h2>Products</h2>
     <h3>CART</h3>
     <p>Our hand-made cinnamon rolls</p>
-    <div id="Gallery-Images">
-      <div id="Original">
+    
+    <a href="../solution-hw1/otherpage.html">
+        <div id="Original">
         <img class="gallery" src="../assets/products/original-cinnamon-roll.jpg" />
-        <p>Original cinnamon roll</p>
+        <p class="product-name">Original cinnamon roll</p>
         <p>$2.49</p>
       </div>
+    </a>
 
+    <a href="../solution-hw1/otherpage.html">
       <div id="Apple">
         <img class="gallery" src="../assets/products/apple-cinnamon-roll.jpg" />
-        <p>Apple cinnamon roll</p>
+        <p class="product-name">Apple cinnamon roll</p>
         <p>$3.49</p>
       </div>
+    </a>
 
+    <a href="../solution-hw1/otherpage.html">
       <div id="Raisin">
         <img class="gallery" src="../assets/products/raisin-cinnamon-roll.jpg" />
-        <p>Raisin cinnamon roll</p>
+        <p class="product-name">Raisin cinnamon roll</p>
         <p>$2.99</p>
       </div>
+    </a>
 
+    <a href="../solution-hw1/otherpage.html">
       <div id="Walnut">
         <img class="gallery" src="../assets/products/walnut-cinnamon-roll.jpg" />
-        <p>Walnut cinnamon roll</p>
+        <p class="product-name">Walnut cinnamon roll</p>
         <p>$3.49</p>
       </div>
+    </a>
 
+    <a href="../solution-hw1/otherpage.html">
       <div id="Double">
         <img class="gallery" src="../assets/products/double-chocolate-cinnamon-roll.jpg" />
-        <p>Double-chocolate cinnamon roll</p>
+        <p class="product-name">Double-chocolate cinnamon roll</p>
         <p>$3.99</p>
       </div>
+    </a>
 
+    <a href="../solution-hw1/otherpage.html">
       <div id="Strawberry">
         <img class="gallery" src="../assets/products/strawberry-cinnamon-roll.jpg" />
-        <p>Strawberry cinnamon roll</p>
+        <p class="product-name">Strawberry cinnamon roll</p>
         <p>$3.99</p>
       </div>
+    </a>
 
-    </div>
+  </div>
   </body>
 </html>
