--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -12,13 +12,13 @@
       <h1>Product Gallery</h1>   
   </div>
 
-  <hr>
+  <hr class="top">
 
   <div id="logo">
     <img class="logo" src="../assets/logo/logo-01.svg" />
   </div>
 
-  <hr> 
+  <hr class="bottom"> 
 
   <nav>
     <a href="../solution-hw1/otherpage.html">PRODUCTS</a>
@@ -26,12 +26,10 @@
   </nav>
 
   <div id="gallery-section">
-    <h2>Products</h2>
-    <h3>CART</h3>
-    <p>Our hand-made cinnamon rolls</p>
+    <h2>Our hand-made cinnamon rolls</h2>
     
     <a href="../solution-hw1/otherpage.html">
-        <div id="Original">
+        <div class="item">
         <img class="gallery" src="../assets/products/original-cinnamon-roll.jpg" />
         <p class="product-name">Original cinnamon roll</p>
         <p>$2.49</p>
@@ -39,7 +37,7 @@
     </a>
 
     <a href="../solution-hw1/otherpage.html">
-      <div id="Apple">
+      <div class="item">
         <img class="gallery" src="../assets/products/apple-cinnamon-roll.jpg" />
         <p class="product-name">Apple cinnamon roll</p>
         <p>$3.49</p>
@@ -47,7 +45,7 @@
     </a>
 
     <a href="../solution-hw1/otherpage.html">
-      <div id="Raisin">
+      <div class="item">
         <img class="gallery" src="../assets/products/raisin-cinnamon-roll.jpg" />
         <p class="product-name">Raisin cinnamon roll</p>
         <p>$2.99</p>
@@ -55,7 +53,7 @@
     </a>
 
     <a href="../solution-hw1/otherpage.html">
-      <div id="Walnut">
+      <div class="item">
         <img class="gallery" src="../assets/products/walnut-cinnamon-roll.jpg" />
         <p class="product-name">Walnut cinnamon roll</p>
         <p>$3.49</p>
@@ -63,7 +61,7 @@
     </a>
 
     <a href="../solution-hw1/otherpage.html">
-      <div id="Double">
+      <div class="item">
         <img class="gallery" src="../assets/products/double-chocolate-cinnamon-roll.jpg" />
         <p class="product-name">Double-chocolate cinnamon roll</p>
         <p>$3.99</p>
@@ -71,7 +69,7 @@
     </a>
 
     <a href="../solution-hw1/otherpage.html">
-      <div id="Strawberry">
+      <div class="item">
         <img class="gallery" src="../assets/products/strawberry-cinnamon-roll.jpg" />
         <p class="product-name">Strawberry cinnamon roll</p>
         <p>$3.99</p>
