--- a/solution-hw1/otherpage.html
+++ b/solution-hw1/otherpage.html
@@ -1,15 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
   <meta charset="UTF-8">
   <title>Page Title</title>
-  
-  <body>
+  <link rel="stylesheet" href="../style/styles.css" type="text/css" />
+</head>  
 
-    <h1>Other Page</h1>
+<body>
 
-    <p>
-        Hello!
-    </p>
+  <div id="h1-container">
+      <h1>Product Detail</h1>   
+  </div>
 
-  </body>
+  <hr class="top">
+
+  <div id="logo">
+    <img class="logo" src="../assets/logo/logo-01.svg" />
+  </div>
+
+  <hr class="bottom"> 
+
+  <nav>
+    <a href="../solution-hw1/otherpage.html">PRODUCTS</a>
+    <a href="../solution-hw1/thirdpage.html">CART</a>
+  </nav>
+
+  <div id="product-section">
+    <h2>Original cinnamon roll</h2>
+    
+    <div class="product-description">
+      <img class="description" src="../assets/products/original-cinnamon-roll.jpg" />
+      <p>Customize our delicious, hand-made cinnamon roll to your liking!</p>
+    </div>
+
+    <div id="selects">
+      <div id="glazing-content">
+        <label for="glazing-select">Glazing</label>
+        <select name="glazing" id="glazing-select">
+          <option value="keep-original">Keep original</option>
+          <option value="sugar-milk">Sugar milk</option>
+          <option value="vanilla-milk">Vanilla milk</option>
+          <option value="double-chocolate">Double chocolate</option>
+        </select>
+      </div>
+
+      <div id="pack-content">
+        <label for="pack-select">Glazing</label>
+        <select name="pack" id="pack-select">
+          <option value="1">1</option>
+          <option value="3">3</option>
+          <option value="6">6</option>
+          <option value="12">12</option>
+        </select>
+      </div>
+    </div>
+  </div>
+
+<div id="cart">
+  <p>$2.49</p>
+  <button id="cart-button">Add to cart</button>
+</div>
+
+</body>
 </html>
