--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -15,13 +15,13 @@
   <hr class="top">
 
   <div id="logo">
-    <img class="logo" src="../assets/logo/logo-01.svg" />
+    <a id="logo" href="../solution-hw1/index.html"><img class="logo" src="../assets/logo/logo-01.svg" /></a>
   </div>
 
   <hr class="bottom"> 
 
   <nav>
-    <a href="../solution-hw1/otherpage.html">PRODUCTS</a>
+    <a href="../solution-hw1/index.html">PRODUCTS</a>
     <a href="../solution-hw1/thirdpage.html">CART</a>
   </nav>
 
