--- a/solution-hw1/thirdpage.html
+++ b/solution-hw1/thirdpage.html
@@ -15,7 +15,7 @@
   <hr class="top">
 
   <div id="logo">
-    <img class="logo" src="../assets/logo/logo-01.svg" />
+    <a id="logo" href="../solution-hw1/index.html"><img class="logo" src="../assets/logo/logo-01.svg" /></a>
   </div>
 
   <hr class="bottom"> 
