--- a/solution-hw1/thirdpage.html
+++ b/solution-hw1/thirdpage.html
@@ -21,7 +21,7 @@
   <hr class="bottom"> 
 
   <nav>
-    <a href="../solution-hw1/otherpage.html">PRODUCTS</a>
+    <a href="../solution-hw1/index.html">PRODUCTS</a>
     <a href="../solution-hw1/thirdpage.html">CART</a>
   </nav>
 
