--- a/solution-hw1/otherpage.html
+++ b/solution-hw1/otherpage.html
@@ -8,17 +8,11 @@
 
 <body>
 
-  <div id="h1-container">
-      <h1>Product Detail</h1>   
-  </div>
-
-  <hr class="top">
-
   <div id="logo">
     <a id="logo" href="../solution-hw1/index.html"><img class="logo" src="../assets/logo/logo-01.svg" /></a>
   </div>
 
-  <hr class="bottom"> 
+  <hr> 
 
   <nav>
     <a href="../solution-hw1/index.html">PRODUCTS</a>
@@ -26,11 +20,11 @@
   </nav>
 
   <div id="product-section">
-    <h2>Original cinnamon roll</h2>
+    <h1>Original cinnamon roll</h1>
     
     <div class="product-description">
       <img class="description" src="../assets/products/original-cinnamon-roll.jpg" />
-      <p>Customize our delicious, hand-made cinnamon roll to your liking!</p>
+      <p id="customize">Customize our delicious, hand-made cinnamon roll to your liking!</p>
     </div>
 
     <div id="selects">
