--- a/solution-hw2/index.html
+++ b/solution-hw2/index.html
@@ -8,20 +8,23 @@
 
 <body>
 
-  <div id="logo">
-    <a id="logo" href="../solution-hw1/index.html"><img class="logo" src="../assets/logo/logo-01.svg" /></a>
+  <div id="header">
+    <div id="logo">
+      <a id="logo" href="../solution-hw1/index.html"><img class="logo" src="../assets/logo/logo-01.svg" /></a>
+    </div>
+
+    <nav>
+      <a href="../solution-hw1/index.html">PRODUCTS</a>
+      <a href="../solution-hw1/thirdpage.html">CART</a>
+    </nav>
   </div>
-
+  
   <hr> 
-
-  <nav>
-    <a href="../solution-hw1/index.html">PRODUCTS</a>
-    <a href="../solution-hw1/thirdpage.html">CART</a>
-  </nav>
+  
+  <h1>Our hand-made cinnamon rolls</h1>
 
   <div id="gallery-section">
-    <h1>Our hand-made cinnamon rolls</h1>
-    
+
     <a href="../solution-hw1/otherpage.html">
         <div class="item">
         <img class="gallery" src="../assets/products/original-cinnamon-roll.jpg" />
