--- a/solution-hw2/index.html
+++ b/solution-hw2/index.html
@@ -13,13 +13,16 @@
       <a id="logo" href="../solution-hw1/index.html"><img class="logo" src="../assets/logo/logo-01.svg" /></a>
     </div>
 
-    <nav>
-      <a href="../solution-hw1/index.html">PRODUCTS</a>
-      <a href="../solution-hw1/thirdpage.html">CART</a>
-    </nav>
+    <div id="header-subset">
+      <nav>
+        <a href="../solution-hw1/index.html">PRODUCTS</a>
+        <a href="../solution-hw1/thirdpage.html">CART</a>
+      </nav>
+      <hr> 
+    </div>
   </div>
   
-  <hr> 
+
   
   <h1>Our hand-made cinnamon rolls</h1>
 
