stuck on cart flex

--- a/solution-hw2/index.html
+++ b/solution-hw2/index.html
@@ -16,19 +16,16 @@
     <div id="header-subset">
       <nav>
         <a href="../solution-hw1/index.html">PRODUCTS</a>
-        <a href="../solution-hw1/thirdpage.html">CART</a>
+        <a href="../solution-hw2/cart.html">CART</a>
       </nav>
       <hr> 
+      <h1>Our hand-made cinnamon rolls</h1>
     </div>
   </div>
   
-
-  
-  <h1>Our hand-made cinnamon rolls</h1>
-
   <div id="gallery-section">
 
-    <a href="../solution-hw1/otherpage.html">
+    <a href="../solution-hw2/details.html">
         <div class="item">
         <img class="gallery" src="../assets/products/original-cinnamon-roll.jpg" />
         <p class="product-name">Original cinnamon roll</p>
@@ -36,7 +33,7 @@
       </div>
     </a>
 
-    <a href="../solution-hw1/otherpage.html">
+    <a href="../solution-hw2/details.html">
       <div class="item">
         <img class="gallery" src="../assets/products/apple-cinnamon-roll.jpg" />
         <p class="product-name">Apple cinnamon roll</p>
@@ -44,7 +41,7 @@
       </div>
     </a>
 
-    <a href="../solution-hw1/otherpage.html">
+    <a href="../solution-hw2/details.html">
       <div class="item">
         <img class="gallery" src="../assets/products/raisin-cinnamon-roll.jpg" />
         <p class="product-name">Raisin cinnamon roll</p>
@@ -52,7 +49,7 @@
       </div>
     </a>
 
-    <a href="../solution-hw1/otherpage.html">
+    <a href="../solution-hw2/details.html">
       <div class="item">
         <img class="gallery" src="../assets/products/walnut-cinnamon-roll.jpg" />
         <p class="product-name">Walnut cinnamon roll</p>
@@ -60,7 +57,7 @@
       </div>
     </a>
 
-    <a href="../solution-hw1/otherpage.html">
+    <a href="../solution-hw2/details.html">
       <div class="item">
         <img class="gallery" src="../assets/products/double-chocolate-cinnamon-roll.jpg" />
         <p class="product-name">Double-chocolate cinnamon roll</p>
@@ -68,7 +65,7 @@
       </div>
     </a>
 
-    <a href="../solution-hw1/otherpage.html">
+    <a href="../solution-hw2/details.html">
       <div class="item">
         <img class="gallery" src="../assets/products/strawberry-cinnamon-roll.jpg" />
         <p class="product-name">Strawberry cinnamon roll</p>
