--- a/solution-hw2/cart.html
+++ b/solution-hw2/cart.html
@@ -16,7 +16,7 @@
 
   <nav>
     <a href="../solution-hw1/index.html">PRODUCTS</a>
-    <a href="../solution-hw1/thirdpage.html">CART</a>
+    <a href="../solution-hw2/cart.html">CART</a>
   </nav>
 
   <div id="cart-section">
