--- a/solution-hw2/details.html
+++ b/solution-hw2/details.html
@@ -53,8 +53,8 @@
           </select>
         </div>
     </div>
-    <div id="cart-section"></div>
-      <p>$2.49</p><p>what gives</p>
+    <div id="price"></div>
+      <p>$2.49</p>
       <button id="cart-button">Add to cart</button>
     </div>    
   </div>
