--- a/solution-hw2/cart.html
+++ b/solution-hw2/cart.html
@@ -40,11 +40,16 @@
     </div>
 
     <div class="cart-item">
+      <div class="image-caption">
         <img class="cart" src="../assets/products/double-chocolate-cinnamon-roll.jpg" />
         <p class="remove">Remove</p>
+      </div> 
+      
+      <div class="selections">
         <p>Double Chocolate Cinnamon Roll</p>
         <p>Glazing: Sugar milk</p>
         <p>Pack size: 6</p>
+      </div>  
         <p class="cart-price">$27.45</p>
     </div>
   
