--- a/solution-hw2/cart.html
+++ b/solution-hw2/cart.html
@@ -53,14 +53,18 @@
         <p class="cart-price">$27.45</p>
     </div>
   
-    <hr>
+    <div class="checkout">
+      <hr>
 
-    <div id="total">
-      <p id="total">Total: $29.94</p>
-    </div> 
+      <div id="total">
+        <div id="total-price">
+          <p>Total:</p>
+          <p>$29.94</p>
+        </div>
+        <button id="checkout-button">Checkout</button>
+      </div> 
+      
+    </div>
   </div>
-
-  <button id="checkout">Checkout</button>
-
 </body>
 </html>
