--- a/solution-hw1/otherpage.html
+++ b/solution-hw1/otherpage.html
@@ -39,7 +39,7 @@
       </div>
 
       <div id="pack-content">
-        <label for="pack-select">Glazing</label>
+        <label for="pack-select">Pack size</label>
         <select name="pack" id="pack-select">
           <option value="1">1</option>
           <option value="3">3</option>
