--- a/solution-hw2/details.html
+++ b/solution-hw2/details.html
@@ -33,7 +33,7 @@
     <div id="customization">
       <p id="description">Customize our delicious, hand-made cinnamon roll to your liking!</p>
       <div id="selects">
-        <div id="glazing-content">
+        <div class="select-content">
           <label for="glazing-select">Glazing</label>
           <select name="glazing" id="glazing-select">
             <option value="keep-original">Keep original</option>
@@ -43,8 +43,8 @@
           </select>
         </div>
 
-        <div id="pack-content">
-          <label for="pack-select">Glazing</label>
+        <div class="select-content">
+          <label for="pack-select">Pack size</label>
           <select name="pack" id="pack-select">
             <option value="1">1</option>
             <option value="3">3</option>
