all but difficult points

--- a/solution-hw2/cart.html
+++ b/solution-hw2/cart.html
@@ -10,12 +10,12 @@
 
   <div id="header">
     <div id="logo">
-      <a id="logo" href="../solution-hw1/index.html"><img class="logo" src="../assets/logo/logo-01.svg" /></a>
+      <a id="logo" href="../ssolution-hw2/index.html"><img class="logo" src="../assets/logo/logo-01.svg" /></a>
     </div>
 
     <div id="header-subset">
       <nav>
-        <a href="../solution-hw1/index.html">PRODUCTS</a>
+        <a href="../ssolution-hw2/index.html">PRODUCTS</a>
         <a href="../solution-hw2/cart.html">CART</a>
       </nav>
       <hr> 
