--- a/solution-hw2/details.html
+++ b/solution-hw2/details.html
@@ -10,12 +10,12 @@
 
   <div id="header">
     <div id="logo">
-      <a id="logo" href="../solution-hw1/index.html"><img class="logo" src="../assets/logo/logo-01.svg" /></a>
+      <a id="logo" href="../solution-hw2/index.html"><img class="logo" src="../assets/logo/logo-01.svg" /></a>
     </div>
 
     <div id="header-subset">
       <nav>
-        <a href="../solution-hw1/index.html">PRODUCTS</a>
+        <a href="../solution-hw2/index.html">PRODUCTS</a>
         <a href="../solution-hw2/cart.html">CART</a>
       </nav>
       <hr> 
@@ -53,10 +53,11 @@
           </select>
         </div>
     </div>
-    <div id="price"></div>
-      <p>$2.49</p>
+    <div id="price">
+      <p id="price-dollar">$2.49</p>
       <button id="cart-button">Add to cart</button>
-    </div>    
+    </div>
+       
   </div>
 </div>
 
