--- a/solution-hw2/cart.html
+++ b/solution-hw2/cart.html
@@ -36,7 +36,9 @@
         <p>Glazing: Keep original</p>
         <p>Pack size: 1</p>
       </div>
-        <p class="cart-price">$2.49</p>
+      <div class="cart-price">
+        <p>$2.49</p>
+      </div>  
     </div>
 
     <div class="cart-item">
