fixed cart-price misplacement

--- a/solution-hw2/cart.html
+++ b/solution-hw2/cart.html
@@ -36,8 +36,8 @@
         <p>Glazing: Keep original</p>
         <p>Pack size: 1</p>
       </div>
-      <div class="cart-price">
-        <p>$2.49</p>
+      <div>
+        <p class="cart-price">$2.49</p>
       </div>  
     </div>
 
