--- a/solution-hw2/cart.html
+++ b/solution-hw2/cart.html
@@ -60,7 +60,7 @@
 
       <div id="total">
         <div id="total-price">
-          <p>Total:</p>
+          <p>Total</p>
           <p>$29.94</p>
         </div>
         <button id="checkout-button">Checkout</button>
