--- a/solution-hw2/index.html
+++ b/solution-hw2/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Page Title</title>
-  <link rel="stylesheet" href="../style/styles2.css" type="text/css" />
+  <link rel="stylesheet" href="../solution-hw2/styles2.css" type="text/css" />
 </head>  
 
 <body>
