set up pricing loops

--- a/solution-hw3/details.html
+++ b/solution-hw3/details.html
@@ -36,12 +36,12 @@
       <div id="selects">
         <div class="select-content">
           <label for="glazing-select">Glazing</label>
-          <select name="glazing" id="glazing-select"></select>
+          <select id="glazing-select" onchange="glazingChange(this)"></select>
         </div>
 
         <div class="select-content">
           <label for="pack-select">Pack size</label>
-          <select name="pack" id="pack-select"></select>
+          <select id="pack-select"></select>
         </div>
     </div>
     <div id="price">
