--- a/solution-hw3/index.html
+++ b/solution-hw3/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Page Title</title>
   <link rel="stylesheet" href="../solution-hw2/Style/styles2.css" type="text/css" />
-  <script src="../solution-hw3/JS/script.js"></script>
+  <script src="../solution-hw3/JS/script.js" defer></script>
 </head>  
 
 <body>
