price updates functional

--- a/solution-hw3/details.html
+++ b/solution-hw3/details.html
@@ -41,7 +41,7 @@
 
         <div class="select-content">
           <label for="pack-select">Pack size</label>
-          <select id="pack-select"></select>
+          <select id="pack-select" onchange="packChange(this)"></select>
         </div>
     </div>
     <div id="price">
