working page but without json

--- a/solution-hw4/details.html
+++ b/solution-hw4/details.html
@@ -5,7 +5,6 @@
   <title>Page Title</title>
   <link rel="stylesheet" href="../solution-hw4/Style/styles2.css" type="text/css" />
   <script src="../solution-hw4/JS/script.js" defer></script>
-  <script src="../solution-hw4/JS/rollsData.js" defer></script>
 </head>  
 
 <body>
@@ -21,7 +20,7 @@
         <a href="../solution-hw3/cart.html">CART</a>
       </nav>
       <hr> 
-      <h1>Original cinnamon roll</h1>
+      <h1 id="type">Original Cinnamon Roll</h1>
     </div>
   </div>
 
