almost there except add to cart

--- a/solution-hw4/cart.html
+++ b/solution-hw4/cart.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <title>Page Title</title>
   <link rel="stylesheet" href="../solution-hw4/Style/styles2.css" type="text/css" />
-  <script src="solution-hw4/JS/script.js" defer></script>
+  <script src="../solution-hw4/JS/rollsData.js" defer></script>
+  <script src="../solution-hw4/JS/script.js" defer></script>
 </head>  
 
 <body>
@@ -33,9 +34,9 @@
       </div> 
 
       <div class="selections">
-        <p>Original Cinnamon Roll</p>
-        <p>Glazing: Keep original</p>
-        <p>Pack size: 1</p>
+        <p id="roll-name-element">Original Cinnamon Roll</p>
+        <p id="glazing-element">Glazing: Keep original</p>
+        <p id="pack-size-element">Pack size: 1</p>
       </div>
       <div>
         <p class="cart-price">$2.49</p>
@@ -55,7 +56,7 @@
       </div>  
         <p class="cart-price">$27.45</p>
     </div>
-  
+ 
     <div class="checkout">
       <hr>
 
