--- a/solution-hw4/details.html
+++ b/solution-hw4/details.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Page Title</title>
   <link rel="stylesheet" href="../solution-hw4/Style/styles2.css" type="text/css" />
+  <script src="../solution-hw4/JS/rollsData.js" defer></script>
   <script src="../solution-hw4/JS/script.js" defer></script>
 </head>  
 
