progress on pricing

--- a/solution-hw5/cart.html
+++ b/solution-hw5/cart.html
@@ -24,30 +24,26 @@
       <h1>Our hand-made cinnamon rolls</h1>
     </div>
   </div>
+      
+  <div class="template-container">
+    <template id="all-rolls">
+      <div class="cart-item">
+        <div class="image-caption">  
+          <img class="cart" src="../assets/products/original-cinnamon-roll.jpg" />
+          <button class="remove">Remove</button>
+        </div> 
 
-  <template id="cart-section">
-    <div class="cart-item">
-    </div>
-  </template>
-
-  <!-- <template id="cart-section">
-         
-    <div class="cart-item">
-      <div class="image-caption">  
-        <img class="cart" src="../assets/products/original-cinnamon-roll.jpg" />
-        <p class="remove">Remove</p>
-      </div> 
-
-      <div class="selections">
-        <p id="roll-name-element">Original Cinnamon Roll</p>
-        <p id="glazing-element">Glazing: Keep original</p>
-        <p id="pack-size-element">Pack size: 1</p>
+        <div class="selections">
+          <p id="roll-name-element">Original Cinnamon Roll</p>
+          <p id="glazing-element">Glazing: Keep original</p>
+          <p id="pack-size-element">Pack size: 1</p>
+        </div>
+        <div>
+          <p class="cart-price">$2.49</p>
+        </div>  
       </div>
-      <div>
-        <p class="cart-price">$2.49</p>
-      </div>  
-    </div>
-  </template>  -->
+    </template>
+  </div>
 
     <div class="checkout">
       <hr>
