Up to populating images with lab protocol

--- a/solution-hw5/cart.html
+++ b/solution-hw5/cart.html
@@ -24,12 +24,11 @@
       <h1>Our hand-made cinnamon rolls</h1>
     </div>
   </div>
-      
-  <div class="template-container">
-    <template id="all-rolls">
+  <div id="roll-list">
+    <template id="roll-template">
       <div class="cart-item">
         <div class="image-caption">  
-          <img class="cart" src="../assets/products/original-cinnamon-roll.jpg" />
+          <img class="roll-image" src="../assets/products/original-cinnamon-roll.jpg" />
           <button class="remove">Remove</button>
         </div> 
 
@@ -44,7 +43,6 @@
       </div>
     </template>
   </div>
-
     <div class="checkout">
       <hr>
 
