update total price

--- a/solution-hw5/cart.html
+++ b/solution-hw5/cart.html
@@ -33,12 +33,12 @@
         </div> 
 
         <div class="selections">
-          <p id="roll-name-element">Original Cinnamon Roll</p>
-          <p id="glazing-element">Glazing: Keep original</p>
-          <p id="pack-size-element">Pack size: 1</p>
+          <p id="roll-name-element">Placeholder</p>
+          <p id="glazing-element">Placeholder</p>
+          <p id="pack-size-element">Placeholder</p>
         </div>
         <div>
-          <p class="cart-price">$2.49</p>
+          <p class="cart-price">Placeholder</p>
         </div>  
       </div>
     </template>
@@ -49,7 +49,7 @@
       <div id="total">
         <div id="total-price">
           <p>Total</p>
-          <p>$29.94</p>
+          <p id="total-price-element">Placeholder</p>
         </div>
         <button id="checkout-button">Checkout</button>
       </div> 
