final draft with updated price rounding

--- a/solution-hw6/index.html
+++ b/solution-hw6/index.html
@@ -5,7 +5,7 @@
   <title>Page Title</title>
   <link rel="stylesheet" href="../solution-hw6/Style/styles2.css" type="text/css" />
   <script src="../solution-hw6/JS/rollsData.js" defer></script>
-  <script src="../solution-hw6/JS/script.js" defer></script>
+  <!-- <script src="../solution-hw6/JS/script.js" defer></script> -->
 </head>  
 
 <body>
