Functionality and ReadMe update

--- a/final-project/Final Project Code/index.html
+++ b/final-project/Final Project Code/index.html
@@ -24,7 +24,6 @@
     <div id="nav-curtain-draft-area">
         <div id="header">
             <nav>
-                    <p>Username</p>
                     <button>New draft</button>
             </nav>
             <div id="header-items">
@@ -40,11 +39,10 @@
             <div id="writing-area" contenteditable="true">
                 <h1>Start writing and don't look back.</h1>
                 <p id="placeholder-text">To begin, delete this text and get typing.</p>
-                <!-- <p id="test-text">To begin, delete this text and get typing.To begin, delete this text and get typing.To begin, delete this text and get typing.To begin, delete this text and get typing.To begin, delete this text and get typing.To begin, delete this text and get typing.To begin, delete this text and get typing.To begin, delete this text and get typing.To begin, delete this text and get typing.To begin, delete this text and get typing.To begin, delete this text and get typing.To begin, delete this text and get typing.To begin, delete this text and get typing.To begin, delete this text and get typing.To begin, delete this text and get typing.To begin, delete this text and get typing.</p> -->
             </div>
             <div id="draft-buttons">
                 <div id="button-container">
-                    <button class="underline-buton">Save draft</button>
+                    <button id="save-draft-button">Save draft</button>
                     <button class="icon-button">Copy text</button>
                 </div>
             </div>
