--- a/final-project/Final Project Code/index.html
+++ b/final-project/Final Project Code/index.html
@@ -39,6 +39,8 @@
             <div id="writing-area" contenteditable="true">
                 <h1>Start writing and don't look back.</h1>
                 <p id="placeholder-text">To begin, delete this text and get typing.</p>
+                <div id="draft-options">
+                </div>
             </div>
             <div id="draft-buttons">
                 <div id="button-container">
