--- a/final-project/Final Project Code/history.html
+++ b/final-project/Final Project Code/history.html
@@ -32,13 +32,10 @@
             </div>
         </div>
         <div id="draft-area">
-            <div id="curtain">
+            <div id="curtain-static">
             </div>
-            <div id="writing-area" contenteditable="true">
-                <h1>Start writing and don't look back.</h1>
+            <div id="history-area">
                 <p id="placeholder-text">To begin, delete this text and get typing.</p>
-                <div id="draft-options">
-                </div>
             </div>
             <div id="draft-buttons">
                 <div id="button-container">
@@ -48,7 +45,7 @@
             </div>
         </div>
  
-    </div>  
+    </div>
 </body>
 
 </html>
