finished draft functionality except history

--- a/final-project/Final Project Code/history.html
+++ b/final-project/Final Project Code/history.html
@@ -24,23 +24,18 @@
     <div id="nav-curtain-draft-area">
         <div id="header">
             <nav>
-                    <button>New draft</button>
+                <p class="new-draft"><a href="../index.html"><i class="fa-solid fa-pencil"></i>New Draft</a></p>
             </nav>
-            <div id="header-items">
-                <p id="timer"><i class="fa-solid fa-hourglass-end"></i>15:00</p>
-                <p id="word-count">Words: Placeholder</p>
-            </div>
         </div>
         <div id="draft-area">
-            <div id="curtain-static">
-            </div>
             <div id="history-area">
-                <p id="placeholder-text">To begin, delete this text and get typing.</p>
+                <h2 class="draft-title">Add title</h2>
+                <p class="history-text">To begin, delete this text and get typing.</p>
             </div>
             <div id="draft-buttons">
                 <div id="button-container">
                     <button id="save-draft-button">Save draft</button>
-                    <button class="icon-button">Copy text</button>
+                    <button class="copy-button">Copy text</button>
                 </div>
             </div>
         </div>
