--- a/final-project/Final Project Code/index.html
+++ b/final-project/Final Project Code/index.html
@@ -43,7 +43,7 @@
                 <p class="new-draft"><a href="../index.html"><i class="fa-solid fa-pencil"></i>New Draft</a></p>
             </nav>
             <div id="header-items">
-                <p id="timer"><i class="fa-solid fa-hourglass-end"></i>15:00</p>
+                <div><p id="timer-number"><i class="fa-solid fa-hourglass-end"></i>15:00</p></div>                
                 <p id="word-count">Words: Placeholder</p>
             </div>
         </div>
