--- a/final-project/Final Project Code/index.html
+++ b/final-project/Final Project Code/index.html
@@ -36,6 +36,9 @@
             </label>
         </div>    
             <p>Lines visible</p>
+            <div class="slidecontainer">
+                <input type="range" min="1" max="4" value="2" class="slider" id="lines-slider">
+            </div>
     </div>
     <div id="nav-curtain-draft-area">
         <div id="header">
