anchor links populated

--- a/final-project/Final Project Code/index.html
+++ b/final-project/Final Project Code/index.html
@@ -25,6 +25,7 @@
 
 <body>
     <div id="sidebar">
+        <h1>headlight</h1>
         <h2 id="first-h2">History</h2>
             <div id="history-links"></div>
         <h2>Settings</h2>
@@ -46,7 +47,7 @@
                 <p class="new-draft"><a href="../index.html"><i class="fa-solid fa-pencil"></i>New Draft</a></p>
             </nav>
             <div id="header-items">
-                <div id="timer"><p class="timer-content" id="minutes">0</p><p class="timer-content">:</p><p class="timer-content" id="seconds">03</p></div>
+                <div id="timer"><p class="timer-content" id="minutes">15</p><p class="timer-content">:</p><p class="timer-content" id="seconds">00</p></div>
                 <p id="word-count">Words: Placeholder</p>
             </div>
         </div>
@@ -54,7 +55,7 @@
             <div id="curtain">
             </div>
             <div id="writing-area" contenteditable="true">
-                <h1>Start writing and don't look back.</h1>
+                <p>Start writing and don't look back.</p>
                 <p id="placeholder-text">To begin, delete this text and get typing.</p>
             </div>
             <div id="draft-options">
