--- a/final-project/Final Project Code/index.html
+++ b/final-project/Final Project Code/index.html
@@ -25,7 +25,7 @@
 
 <body>
     <div id="sidebar">
-        <h1>headlight</h1>
+        <h1><a href="../index.html">headlight</a></h1>
         <h2 id="first-h2">History</h2>
             <div id="history-links"></div>
         <h2>Settings</h2>
@@ -55,8 +55,8 @@
             <div id="curtain">
             </div>
             <div id="writing-area" contenteditable="true">
-                <p>Start writing and don't look back.</p>
-                <p id="placeholder-text">To begin, delete this text and get typing.</p>
+                <p class="placeholder-text">Start writing and don't look back.</p>
+                <p class="placeholder-text">To begin, delete this text and get typing.</p>
             </div>
             <div id="draft-options">
             </div>
