name and history link

--- a/final-project/Final Project Code/index.html
+++ b/final-project/Final Project Code/index.html
@@ -20,12 +20,12 @@
     <link rel="stylesheet" href="./style.css"/>
 
     <script defer src="./functions.js"></script>
-    <title>headlight</title>
+    <title>drafty</title>
 </head>
 
 <body>
     <div id="sidebar">
-        <h1><a href="../index.html">headlight</a></h1>
+        <h1><a href="../index.html">drafty</a></h1>
         <h2 id="first-h2">History</h2>
             <div id="history-links"></div>
         <h2>Settings</h2>
