--- a/final-project/Final Project Code/history.html
+++ b/final-project/Final Project Code/history.html
@@ -18,13 +18,13 @@
     <!-- End Dark Mode Library -->
 
     <link rel="stylesheet" href="./style.css"/>
-    <title>headlight</title>
+    <title>drafty</title>
     <script defer src="/historyFunctions.js"></script>
 </head>
 
 <body id="history">
     <div id="sidebar">
-        <h1><a href="../index.html">headlight</a></h1>
+        <h1><a href="../index.html">drafty</a></h1>
         <h2>Settings</h2>
         <div id="label-and-toggle">    
             <p id="switch-label">Dark mode</p>
