update history script link

--- a/final-project/Final Project Code/history.html
+++ b/final-project/Final Project Code/history.html
@@ -19,7 +19,7 @@
 
     <link rel="stylesheet" href="./style.css"/>
     <title>drafty</title>
-    <script defer src="/historyFunctions.js"></script>
+    <script defer src="./historyFunctions.js"></script>
 </head>
 
 <body id="history">
