--- a/final-project/final-project-code/history.html
+++ b/final-project/final-project-code/history.html
@@ -24,7 +24,7 @@
 
 <body id="history">
     <div id="sidebar">
-        <h1><a href="../Final%20Project%20Code/index.html">drafty</a></h1>
+        <h1><a href="../index.html">drafty</a></h1>
         <h2>Settings</h2>
         <div id="label-and-toggle">    
             <p id="switch-label">Dark mode</p>
