--- a/final-project/final-project-code/index.html
+++ b/final-project/final-project-code/index.html
@@ -25,7 +25,7 @@
 
 <body>
     <div id="sidebar">
-        <h1><a href="../Final%20Project%20Code/index.html">drafty</a></h1>
+        <h1><a href="../index.html">drafty</a></h1>
         <h2 id="first-h2">History</h2>
             <div id="history-links"></div>
         <h2>Settings</h2>
