--- a/final-project/final-project-code/index.html
+++ b/final-project/final-project-code/index.html
@@ -31,14 +31,14 @@
         <h2>Settings</h2>
         <div id="label-and-toggle">    
             <p id="switch-label">Dark mode</p>
-            <label class="switch">
+            <label for="darkmode" class="switch">
                 <input type="checkbox">
                 <span class="slider round" id="toggle"></span>
             </label>
         </div>
         <div id="label-and-slider">    
             <p id="slider-label">Lines visible: 2</p>
-            <input type="range" min="1" max="4" value="2" class="slider" id="lines-slider" disabled = true>
+            <label for="lines-visible"><input type="range" min="1" max="4" value="2" class="slider" id="lines-slider" disabled=true></label>
         </div>        
     </div>
     <div id="nav-curtain-draft-area">
