--- a/final-project/final-project-code/index.html
+++ b/final-project/final-project-code/index.html
@@ -55,7 +55,7 @@
             <div id="curtain">
             </div>
             <div id="writing-area" contenteditable="true">
-                <p class="placeholder-text">Start writing and don't look back.</p>
+                <p class="placeholder-text">Start writing and don't look back. Just updated.</p>
                 <p class="placeholder-text">To begin, delete this text and get typing.</p>
             </div>
             <div id="draft-options">
