--- a/final-project/final-project-code/index.html
+++ b/final-project/final-project-code/index.html
@@ -31,14 +31,14 @@
         <h2>Settings</h2>
         <div id="label-and-toggle">    
             <p id="switch-label">Dark mode</p>
-            <label for="darkmode" class="switch">
+            <label for="toggle" class="switch">
                 <input type="checkbox">
                 <span class="slider round" id="toggle"></span>
             </label>
         </div>
         <div id="label-and-slider">    
             <p id="slider-label">Lines visible: 2</p>
-            <label for="lines-visible"><input type="range" min="1" max="4" value="2" class="slider" id="lines-slider" disabled=true></label>
+            <label for="lines-slider"><input type="range" min="1" max="4" value="2" class="slider" id="lines-slider" disabled=true></label>
         </div>        
     </div>
     <div id="nav-curtain-draft-area">
@@ -55,7 +55,7 @@
             <div id="curtain">
             </div>
             <div id="writing-area" contenteditable="true">
-                <p class="placeholder-text">Start writing and don't look back. Just updated.</p>
+                <p class="placeholder-text">Start writing and don't look back. 2:23PM</p>
                 <p class="placeholder-text">To begin, delete this text and get typing.</p>
             </div>
             <div id="draft-options">
