--- a/final-project/final-project-code/index.html
+++ b/final-project/final-project-code/index.html
@@ -29,16 +29,16 @@
         <h2 id="first-h2">History</h2>
             <div id="history-links"></div>
         <h2>Settings</h2>
-        <div id="label-and-toggle">    
-            <p id="switch-label">Dark mode</p>
+        <div id="label-and-toggle">  
+            <label for="toggle">Dark mode</label>  
             <label for="toggle" class="switch">
                 <input type="checkbox">
                 <span class="slider round" id="toggle"></span>
             </label>
         </div>
-        <div id="label-and-slider">    
-            <p id="slider-label">Lines visible: 2</p>
-            <label for="lines-slider"><input type="range" min="1" max="4" value="2" class="slider" id="lines-slider" disabled=true></label>
+        <div id="label-and-slider">   
+            <label for="lines-slider">Lines visible</label> 
+            <input type="range" min="1" max="4" value="2" class="slider" id="lines-slider" disabled=true>
         </div>        
     </div>
     <div id="nav-curtain-draft-area">
