--- a/final-project/final-project-code/history.html
+++ b/final-project/final-project-code/history.html
@@ -27,7 +27,7 @@
         <h1><a href="../index.html">drafty</a></h1>
         <h2>Settings</h2>
         <div id="label-and-toggle">    
-            <p id="switch-label">Dark mode</p>
+            <label for="toggle">Dark mode</label>  
             <label class="switch">
                 <input type="checkbox">
                 <span class="slider round" id="toggle"></span>
