--- a/final-project/final-project-code/history.html
+++ b/final-project/final-project-code/history.html
@@ -24,7 +24,7 @@
 
 <body id="history">
     <div id="sidebar">
-        <h1><a href="../index.html">drafty</a></h1>
+        <h1><a href="../final-project-code/index.html">drafty</a></h1>
         <h2>Settings</h2>
         <div id="label-and-toggle">    
             <label for="toggle">Dark mode</label>  
@@ -37,7 +37,7 @@
     <div id="nav-curtain-draft-area">
         <div id="header">
             <nav>
-                <p class="new-draft"><a href="../index.html"><i class="fa-solid fa-pencil"></i>New Draft</a></p>
+                <p class="new-draft"><a href="../final-project-code/index.html"><i class="fa-solid fa-pencil"></i>New Draft</a></p>
             </nav>
         </div>
         <div class="history-area"></div>
