--- a/final-project/final-project-code/index.html
+++ b/final-project/final-project-code/index.html
@@ -25,16 +25,16 @@
 
 <body>
     <div id="sidebar">
-        <h1><a href="../index.html">drafty</a></h1>
+        <h1><a href="../final-project-code/index.html">drafty</a></h1>
         <h2 id="first-h2">History</h2>
             <div id="history-links"></div>
         <h2>Settings</h2>
         <div id="label-and-toggle">  
-            <label for="toggle">Dark mode</label>  
-            <label for="toggle" class="switch">
+            <label for="toggle"><label for="checkbox">Dark mode</label></label>
+            <div class="switch">
                 <input type="checkbox">
                 <span class="slider round" id="toggle"></span>
-            </label>
+            </div>
         </div>
         <div id="label-and-slider">   
             <label for="lines-slider">Lines visible</label> 
@@ -44,7 +44,7 @@
     <div id="nav-curtain-draft-area">
         <div id="header">
             <nav>
-                <p class="new-draft"><a href="../index.html"><i class="fa-solid fa-pencil"></i>New Draft</a></p>
+                <p class="new-draft"><a href="../final-project-code/index.html"><i class="fa-solid fa-pencil"></i>New Draft</a></p>
             </nav>
             <div id="header-items">
                 <div id="timer"><p class="timer-content" id="minutes">15</p><p class="timer-content">:</p><p class="timer-content" id="seconds">00</p></div>
@@ -55,7 +55,7 @@
             <div id="curtain">
             </div>
             <div id="writing-area" contenteditable="true">
-                <p class="placeholder-text">Start writing and don't look back. 2:33PM</p>
+                <p class="placeholder-text">Start writing and don't look back. 2:42PM</p>
                 <p class="placeholder-text">To begin, delete this text and get typing.</p>
             </div>
             <div id="draft-options">
