--- a/final-project/final-project-code/index.html
+++ b/final-project/final-project-code/index.html
@@ -30,7 +30,7 @@
             <div id="history-links"></div>
         <h2>Settings</h2>
         <div id="label-and-toggle">  
-            <label for="toggle"><label for="checkbox">Dark mode</label></label>
+            <label for="toggle">Dark mode</label>
             <div class="switch">
                 <input type="checkbox">
                 <span class="slider round" id="toggle"></span>
@@ -55,7 +55,7 @@
             <div id="curtain">
             </div>
             <div id="writing-area" contenteditable="true">
-                <p class="placeholder-text">Start writing and don't look back. 2:42PM</p>
+                <p class="placeholder-text">Start writing and don't look back.</p>
                 <p class="placeholder-text">To begin, delete this text and get typing.</p>
             </div>
             <div id="draft-options">
