--- a/final-project/final-project-code/history.html
+++ b/final-project/final-project-code/history.html
@@ -26,13 +26,13 @@
     <div id="sidebar">
         <h1><a href="../final-project-code/index.html">drafty</a></h1>
         <h2>Settings</h2>
-        <div id="label-and-toggle">    
-            <label for="toggle">Dark mode</label>  
-            <label class="switch">
+        <div id="label-and-toggle">  
+            <label for="toggle">Dark mode</label>
+            <div class="switch">
                 <input type="checkbox">
                 <span class="slider round" id="toggle"></span>
-            </label>
-        </div>       
+            </div>
+        </div>     
     </div>
     <div id="nav-curtain-draft-area">
         <div id="header">
