--- a/final-project/final-project-code/index.html
+++ b/final-project/final-project-code/index.html
@@ -31,13 +31,13 @@
         <h2>Settings</h2>
         <div id="label-and-toggle">  
             <label for="toggle">Dark mode</label>
-            <div class="switch">
+            <label class="switch">
                 <input type="checkbox">
                 <span class="slider round" id="toggle"></span>
-            </div>
+            </label>
         </div>
         <div id="label-and-slider">   
-            <label for="lines-slider">Lines visible</label> 
+            <label for="lines-slider"><p id="slider-label">Lines visible: 2</p></label> 
             <input type="range" min="1" max="4" value="2" class="slider" id="lines-slider" disabled=true>
         </div>        
     </div>
